# kesav-v.github.io

./: .env.example  .gitignore  404.html  CNAME  DEPLOY_RAILWAY.md  RAILWAY_DEPLOYMENT.md  asset-manifest.json  index.html  mypy.ini  package-lock.json  package.json  precache-manifest.3d0cf4316dfc343bc421679264158c15.js  precache-manifest.560e9024c178a5d870b97d5b04bced16.js  precache-manifest.61b51f1170c6d633c72d91352e4fdc04.js  precache-manifest.67e3c45e64b1115739cef7ec28588262.js  precache-manifest.81058ecee54a711a6c853395eabd888c.js  precache-manifest.ec2dcfeff6c96dde8ec2ebc1159b8fd8.js  service-worker.js
Src/Music/: Music.js
infinite-chess-server/: .dockerignore  .gitignore  API.md  Dockerfile  README.md  deploy-pi.sh  docker-compose.yml  pyproject.toml  requirements.txt
infinite-chess-server/infinite-chess/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pyrightconfig.json
infinite-chess-server/infinite-chess/infinite_chess/: __init__.py  board.py  cli.py  web.py
infinite-chess-server/infinite-chess/infinite_chess/static/: index.html
infinite-chess-server/infinite-chess/tests/: test_board.py
infinite-chess-server/server/: main.py  state.py
infinite-chess-server/static/: index.html
infinite-chess-server/tests/: conftest.py  test_main.py  test_state.py
public/: index.html  manifest.json
server/: .gitignore  POSTGRES_SETUP.md  app.py  board.py  db.py  railway.toml  requirements.txt
src/: App.css  App.js  App.tsx  config.ts  index.css
terraform/: .gitignore  README.md  main.tf  terraform.tfvars.example  variables.tf
(+168 files in other folders)
